--- a/src/webapps/static/style.css
+++ b/src/webapps/static/style.css
@@ -1,14 +1,17 @@
 body            { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
-.trace_entry    { width: 700px; }
-.table_header    { color: #999; }
-.table_header_c3 { margin: 0.1em; float: left; width: 350px; }
+.container      { width: 700px; }
+.trace_entry    { width: 700px; float: left; border: 1px solid #eee; position: relative;}
+.trace_entry:hover    { border-top: 1px solid #666; border-bottom: 1px solid #666; background: #ccc; }
 .trace_entry_user { margin: 0.1em; float: left; width: 100px; }
 .trace_entry_date { margin: 0.1em; float: left; width: 200px; }
 .trace_entry_app { margin: 0.1em; float: left; width: 350px; font-family: Monaco, Consolas, "Lucida Console", monospace; }
+.trace_entry_fill {display:block; width:100%; height:100%; z-index:10; }
+
+.table_header    { width: 700px; color: #999; float: left;}
+.table_header_c3 { margin: 0.1em; float: left; width: 350px; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
     padding: 0.8em; background: white; }
